2009-04-04	Jannis Pohlmann <jannis@xfce.org>

	* AUTHORS: Add Travis Watkins as a contributor.
	* docs/reference: Update API docs.
	* libxfce4menu/xfce-menu-directory.{c,h},
	  libxfce4menu/xfce-menu-element.{c,h},
	  libxfce4menu/xfce-menu-item.c,
	  libxfce4menu/xfce-menu-separator.c, libxfce4menu/xfce-menu.c: Add
	  xfce_menu_element_get_visible() to XfceMenuElement. The
	  XfceMenuSeparator implementation always returns TRUE while the
	  XfceMenuItem implementation checks the Hidden/OnlyShowIn/NotShowIn
	  values of the corresponding desktop entry. XfceMenu checks the
	  Hidden/OnlyShowIn/NotShowIn values of its XfceMenuDirectory as well
	  as whether there are any visible child elements. Thanks to Travis
	  Watkins for the patch.
	* tests/test-display-menu.c, tests/test-menu-spec.c: Update tests to
	  reflect the latest API changes. Thanks to Travis for updating
	  test-display-menu.c.

2009-03-15	Jannis Pohlmann <jannis@xfce.org>

	* STATUS: Update STATUS file.

2009-03-15	Jannis Pohlmann <jannis@xfce.org>

	* docs/reference/: Update API docs.
	* libxfce4menu/libxfce4menu.c: Set path pointer to NULL after freeing
	  it to avoid random data in it.
	* libxfce4menu/xfce-menu-merger.c: Prepend a default layout element
	  to the root menu so that the root menu and its children have a
	  layout to use as a fallback. Remove empty layout elements so that
	  we can fallback to the default layout. 
	* libxfce4menu/xfce-menu-node.{c,h}: Add new function
	  xfce_menu_node_tree_get_child_node(). Add
	  XFCE_MENU_NODE_TYPE_DEFAULT_LAYOUT to the XfceMenuNodeType enum.
	* libxfce4menu/xfce-menu-parser.c: Parse <DefaultLayout> elements.
	  Attributes are currently ignored.
	* libxfce4menu/xfce-menu.c: Properly look up the right layout or
	  default layout in xfce_menu_get_elements().
	* tests/test-display-menu.c, tests/test-menu-spec.c: Improve error
	  messages.

2009-03-15	Jannis Pohlmann <jannis@xfce.org>

	* docs/reference/libxfce4menu-sections.txt,