@@ -78,6 +78,24 @@ xfce_menu_element_get_name (XfceMenuElement *element)
 
 
 const gchar*
+xfce_menu_element_get_comment (XfceMenuElement *element)
+{
+  g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), NULL);
+  return (*XFCE_MENU_ELEMENT_GET_IFACE (element)->get_comment) (element);
+}
+
+
+
+const gchar*
+xfce_menu_element_get_comment (XfceMenuElement *element)
+{
+  g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), NULL);
+  return (*XFCE_MENU_ELEMENT_GET_IFACE (element)->get_comment) (element);
+}
+
+
+
+const gchar*
 xfce_menu_element_get_icon_name (XfceMenuElement *element)
 {
   g_return_val_if_fail (XFCE_IS_MENU_ELEMENT (element), NULL);
