@@ -45,6 +45,7 @@ struct _XfceMenuElementIface
 
   /* Virtual methods */
   const gchar *(*get_name)      (XfceMenuElement *element);
+  const gchar *(*get_comment)   (XfceMenuElement *element);
   const gchar *(*get_icon_name) (XfceMenuElement *element);
   gboolean     (*get_visible)   (XfceMenuElement *element);
 };
@@ -52,6 +53,7 @@ struct _XfceMenuElementIface
 GType        xfce_menu_element_get_type      (void) G_GNUC_CONST;
 
 const gchar *xfce_menu_element_get_name      (XfceMenuElement *element);
+const gchar *xfce_menu_element_get_comment   (XfceMenuElement *element);
 const gchar *xfce_menu_element_get_icon_name (XfceMenuElement *element);
 gboolean     xfce_menu_element_get_visible   (XfceMenuElement *element);
 
