@@ -68,6 +68,7 @@ static void         xfce_menu_item_set_property           (GObject              
                                                            const GValue         *value,
                                                            GParamSpec           *pspec);
 static const gchar *xfce_menu_item_get_element_name       (XfceMenuElement      *element);
+static const gchar *xfce_menu_item_get_element_comment    (XfceMenuElement      *element);
 static const gchar *xfce_menu_item_get_element_icon_name  (XfceMenuElement      *element);
 static gboolean     xfce_menu_item_get_element_visible    (XfceMenuElement      *element);
 
@@ -362,6 +363,7 @@ static void
 xfce_menu_item_element_init (XfceMenuElementIface *iface)
 {
   iface->get_name = xfce_menu_item_get_element_name;
+  iface->get_comment = xfce_menu_item_get_element_comment;
   iface->get_icon_name = xfce_menu_item_get_element_icon_name;
   iface->get_visible = xfce_menu_item_get_element_visible;
 }
@@ -1241,6 +1243,15 @@ xfce_menu_item_get_element_name (XfceMenuElement *element)
 {
   g_return_val_if_fail (XFCE_IS_MENU_ITEM (element), NULL);
   return XFCE_MENU_ITEM (element)->priv->name;
+}
+
+
+
+static const gchar*
+xfce_menu_item_get_element_comment (XfceMenuElement *element)
+{
+  g_return_val_if_fail (XFCE_IS_MENU_ITEM (element), NULL);
+  return XFCE_MENU_ITEM (element)->priv->comment;
 }
 
 
